Fix alignment on header menu

--- a/components/Layout/Header/Header.module.scss
+++ b/components/Layout/Header/Header.module.scss
@@ -9,7 +9,7 @@
         width: 100%;
         background-color: var(--headerMenuBg);
         > * {
-            flex-grow: 1;
+            width: 20%;
             text-align: center;
             font-size: var(--textSizeLarge);
             text-transform: uppercase;
